Fixing IE11 flexbox alignment when min-width is set
For more info on the fix please see https://github.com/philipwalton/flexbugs/issues/231

--- a/packages/block-library/src/cover-image/style.scss
+++ b/packages/block-library/src/cover-image/style.scss
@@ -2,6 +2,7 @@
 	position: relative;
 	background-size: cover;
 	background-position: center center;
+	height: 430px;
 	min-height: 430px;
 	width: 100%;
 	margin: 0 0 1.5em 0;
